--- a/index.html
+++ b/index.html
@@ -15,17 +15,47 @@
 
         <nav>
             <ul>
-                <li><a href="index.html"></a>HOME</li>
-                <li>BLOG</li>
-                <li>ABOUT US</li>
-                <li>CONTACT US</li>
+                <li><a href="index.html" class="negrita">HOME</a></li>
+                <li><a href="blog.html" class="refnav">BLOG</a></li>
+                <li><a href="aboutus.html" class="refnav">ABOUT US</a></li>
+                <li><a href="contactus.html" class="refnav">CONTACT US</a></li>
             </ul>
         </nav>
 
         <main>
-            <img src="imgs/Imatge.PNG">
+            <img src="imgs/img1.png" class="imgprincipal">
+            <article>
+                <section>
+                    <h1 class="titolsection">Bookkeepping</h1>
+                    <p class="textsection">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit reiciendis ipsam aspernatur, nisi dolor unde architecto distinctio tenetur aperiam facilis numquam. Fuga tempora similique ipsa. Cumque unde saepe dicta ipsum.</p>
+                    <a class="refsection" href="">Lear more</a>
+                </section>
 
+                <section>
+                    <h1 class="titolsection">Consulting</h1>
+                    <p class="textsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptatem omnis, reprehenderit in ex ipsam nulla esse tempore suscipit vero, qui exercitationem quas natus dicta? Aliquam unde dolorum dignissimos eaque!</p>
+                    <a class="refsection" href="">Apply now</a>
+                </section>
+
+                <section>
+                    <h1 class="titolsection">Our Clients</h1>
+                    <p class="textsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nulla exercitationem ea similique rerum ipsa accusamus, doloribus soluta recusandae aperiam nam. Expedita quo recusandae quis! Deserunt excepturi hic fugiat consequatur.</p>
+                    <a class="refsection" href="">See clients</a>
+                </section>
+
+                <section>
+                    <h1 class="titolsection">Contact Us</h1>
+                    <p class="textsection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, vel velit facere rerum consequatur soluta fuga aliquid odio placeat ratione quisquam aliquam quas earum accusantium porro veritatis animi deleniti temporibus!</p>
+                    <a class="refsection"href="">Get in touch</a>
+                </section>
+            </article>
         </main>
+
+        <footer>
+            <p class="textfooter">Website created by Josep Recolons</p>
+            <a href="http://twitter.com" target="_blank" class="imatgefooter"><img src="imgs/iconotwitter.png" width="40" height="40"></a>
+            <a href="http://google.com" target="_blank"><img src="imgs/iconogoogle+.png" width="40" height="40"></a>
+        </footer>
     </body>
 
 </html>
